[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Chris Porter"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
networkx = "^2.8.8"
jupyterlab = "^3.5.1"
matplotlib = "^3.6.2"
scipy = "^1.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
